@@ -1,51 +1,46 @@
 package com.acessolivre.config;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.StreamSupport;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.ProviderManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
+import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import com.acessolivre.repository.UsuarioRepository;
 import com.acessolivre.security.CustomUserDetailsService;
 import com.acessolivre.security.JwtService;
 import com.acessolivre.security.TokenResponseFilter;
 import com.acessolivre.security.TokenRevogadoFilter;
-import com.acessolivre.repository.UsuarioRepository;
 
 import lombok.RequiredArgsConstructor;
 
-/**
- * Configuração de segurança moderna com Spring Security, JWT e CORS.
- */
 @Configuration
 @RequiredArgsConstructor
-@EnableMethodSecurity
+@EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
 
     private final CustomUserDetailsService customUserDetailsService;
     private final JwtService jwtService;
     private final UsuarioRepository usuarioRepository;
     
-    @Value("${cors.allowed.origins}")
+    @Value("${cors.allowed.origins:*}")
     private String corsAllowedOrigins;
 
     @Bean
@@ -65,43 +60,38 @@ public class SecurityConfig {
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
-                .requestMatchers(org.springframework.http.HttpMethod.GET, "/api/categorias", "/api/tipos-acessibilidade").permitAll()
                 .requestMatchers(
-                    "/api/auth/register",
-                    "/api/auth/register/confirm",
-                    "/api/auth/register/resend-code",
-                    "/api/auth/login",
-                    "/api/auth/validate",
-                    "/api/auth/reset-password/**",
+                    "/api/auth/**",
+                    "/v3/api-docs/**",
                     "/swagger-ui/**",
-                    "/v3/api-docs/**"
+                    "/swagger-ui.html",
+                    "/uploads/**",
+                    "/api/locais",
+                    "/api/locais/**",
+                    "/api/locais/buscar"
                 ).permitAll()
-                .requestMatchers("/api/admin/bootstrap").permitAll()
-                .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.GET,
+                    "/api/avaliacoes",
+                    "/api/avaliacoes/*",
+                    "/api/avaliacoes/local/**"
+                ).permitAll()
                 .anyRequest().authenticated()
             )
-            .oauth2ResourceServer(oauth2 -> oauth2
-                .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter()))
-            )
-            .addFilterBefore(tokenRevogadoFilter(), UsernamePasswordAuthenticationFilter.class)
-            .addFilterAfter(tokenResponseFilter(), TokenRevogadoFilter.class);
+            .oauth2ResourceServer(oauth2 -> oauth2.jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter())));
+        http.addFilterBefore(tokenRevogadoFilter(), UsernamePasswordAuthenticationFilter.class);
+        http.addFilterAfter(tokenResponseFilter(), TokenRevogadoFilter.class);
 
         return http.build();
     }
 
-    /**
-     * Configuração CORS para permitir chamadas de frontend.
-     * Origens permitidas são configuradas via variável de ambiente CORS_ALLOWED_ORIGINS.
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(corsAllowedOrigins.split(",")));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
-        configuration.setExposedHeaders(List.of("Authorization", "New-Auth-Token"));
-        configuration.setAllowCredentials(true);
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(List.of("*"));
+        configuration.setAllowCredentials(false);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -112,47 +102,32 @@ public class SecurityConfig {
         return new BCryptPasswordEncoder();
     }
 
-    /**
-     * Declara explicitamente o UserDetailsService para evitar ambiguidade.
-     * Retorna o CustomUserDetailsService que usa email para autenticação.
-     */
     @Bean
     public UserDetailsService userDetailsService() {
         return customUserDetailsService;
     }
 
-    /**
-     * Configura o AuthenticationManager com o UserDetailsService e PasswordEncoder corretos.
-     */
     @Bean
-    public AuthenticationManager authenticationManager(UserDetailsService userDetailsService, PasswordEncoder passwordEncoder) {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        authProvider.setUserDetailsService(userDetailsService);
-        authProvider.setPasswordEncoder(passwordEncoder);
-        return new ProviderManager(authProvider);
+    public DaoAuthenticationProvider daoAuthenticationProvider() {
+        DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
+        provider.setUserDetailsService(customUserDetailsService);
+        provider.setPasswordEncoder(passwordEncoder());
+        return provider;
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager() {
+        return new ProviderManager(daoAuthenticationProvider());
     }
 
     @Bean
     public JwtAuthenticationConverter jwtAuthenticationConverter() {
+        JwtGrantedAuthoritiesConverter authoritiesConverter = new JwtGrantedAuthoritiesConverter();
+        authoritiesConverter.setAuthoritiesClaimName("scope");
+        authoritiesConverter.setAuthorityPrefix("");
+
         JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
-        converter.setJwtGrantedAuthoritiesConverter(jwt -> {
-            Object scope = jwt.getClaim("scope");
-            if (scope instanceof String scopeString) {
-                return Arrays.stream(scopeString.split(" "))
-                    .filter(s -> !s.isBlank())
-                    .map(s -> (GrantedAuthority) new SimpleGrantedAuthority(s))
-                    .toList();
-            }
-            if (scope instanceof Iterable<?> scopeList) {
-                return StreamSupport.stream(scopeList.spliterator(), false)
-                    .map(Object::toString)
-                    .map(String::trim)
-                    .filter(s -> !s.isBlank())
-                    .map(s -> (GrantedAuthority) new SimpleGrantedAuthority(s))
-                    .toList();
-            }
-            return List.of();
-        });
+        converter.setJwtGrantedAuthoritiesConverter(authoritiesConverter);
         return converter;
     }
 }
